--- a/static/yaml/news.yaml
+++ b/static/yaml/news.yaml
@@ -1,3 +1,14 @@
+- title: Minor vardiff bug causing false rejects
+  date: 4/15/2014
+  body: |
+    We've identified a bug in our vardiff server - which causes a some false rejects to occur.
+    It does not impact your actual mining perfomance at all. If this concerns you just switch away 
+    from vardiff for now. Basically, occasionally vardiff will tell your
+    client to submit shares which match a difficulty lower than vardiff is accepting. This means the server
+    then rejects those low diff shares. You are not actually losing any performance, because its still 
+    accepting shares at the correct difficulty(statistically its the same), it just gives you 
+    rejected messages when it shouldn't. We'll be patching this (and it'll require a reboot w/ a min or 
+    two of downtime), probably in the next week.
 - title: Vardiff lives!
   date: 4/5/2014
   body: |
